# hlpipes-sample

./: .gitignore  .gitmodules  CMakeLists.txt
hl-pipelines/: bayer2rggb_generator.cpp  rggb_to_bayer_generator.cpp
src/: main.cpp
